--- a/app/src/main/res/layout/activity_insertname.xml
+++ b/app/src/main/res/layout/activity_insertname.xml
@@ -5,48 +5,123 @@
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:orientation="vertical"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_marginTop="200dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:id="@+id/linearLayout">
 
 
-        <EditText
-            android:id="@+id/fighter1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Enter First Fighter" />"/>
+    <EditText
+        android:id="@+id/f1r2"
+        android:layout_width="70px"
+        android:layout_height="70px"
 
-        <EditText
-            android:id="@+id/fighter2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/tv1"
-            android:hint="Enter Second Fighter" />
-        <Spinner
-            android:id="@+id/spinner"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            />
+        android:layout_alignLeft="@+id/f1r1"
+        android:layout_alignStart="@+id/f1r1"
+        android:layout_below="@+id/f1r1"
+        android:layout_marginTop="17dp"
+        android:hint="1"
+        android:inputType="number"
+        android:textAlignment="center"
+        android:textColor="@android:color/black"
+        android:textSize="15sp" />
+
+    <EditText
+        android:id="@+id/f1r1"
+        android:layout_width="70px"
+        android:layout_height="70px"
+
+        android:layout_marginTop="20dp"
+        android:hint="1"
+        android:inputType="number"
+        android:textAlignment="center"
+        android:textColor="@android:color/black"
+        android:textSize="15sp"
+        android:layout_below="@+id/fighter1"
+        />
+
+    <EditText
+        android:id="@+id/f2r1"
+        android:layout_width="70px"
+        android:layout_height="70px"
+        android:hint="1"
+        android:inputType="number"
+        android:textAlignment="center"
+        android:textColor="@android:color/black"
+        android:textSize="15sp"
+        android:layout_alignBaseline="@+id/f1r1"
+        android:layout_alignBottom="@+id/f1r1"
+        android:layout_toLeftOf="@+id/totalf2"
+        android:layout_toStartOf="@+id/totalf2" />
 
 
-    </LinearLayout>
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/button1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="79dp"
-        android:text="Continue"
-        android:layout_below="@+id/linearLayout"
-        android:layout_centerHorizontal="true" />
+        android:text="Add"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="47dp"
+        android:onClick="addscore"/>
+
+    <EditText
+        android:id="@+id/fighter1"
+        android:layout_width="350px"
+        android:layout_height="75px"
+        android:hint="Enter First Fighter"
+        android:textAlignment="center"
+        android:textSize="12sp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <EditText
+        android:id="@+id/fighter2"
+        android:layout_width="350px"
+        android:layout_height="75px"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        android:hint="Enter Second Fighter"
+        android:textAlignment="center"
+        android:textSize="12sp" />
+
+    <TextView
+        android:id="@+id/totalf1"
+        android:layout_width="80px"
+        android:layout_height="80px"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignTop="@+id/button1"
+        android:layout_marginLeft="23dp"
+        android:layout_marginStart="23dp"
+        android:layout_marginTop="11dp"
+         />
+
+    <TextView
+        android:id="@+id/totalf2"
+        android:layout_width="80px"
+        android:layout_height="80px"
+
+        android:layout_marginEnd="28dp"
+        android:layout_marginRight="28dp"
+        android:layout_alignBaseline="@+id/totalf1"
+        android:layout_alignBottom="@+id/totalf1"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
+
+    <EditText
+        android:id="@+id/f2r2"
+        android:layout_width="70px"
+        android:layout_height="70px"
+        android:ems="10"
+        android:inputType="number"
+        android:layout_alignBaseline="@+id/f1r2"
+        android:layout_alignBottom="@+id/f1r2"
+        android:layout_alignLeft="@+id/f2r1"
+        android:layout_alignStart="@+id/f2r1" />
 
 </RelativeLayout>
 
