--- a/app/src/main/res/layout/activity_insertname.xml
+++ b/app/src/main/res/layout/activity_insertname.xml
@@ -12,6 +12,237 @@
 
 
     <EditText
+        android:id="@+id/editText22"
+        android:layout_width="70px"
+        android:layout_height="70px"
+        android:layout_below="@+id/editText12"
+        android:layout_marginTop="11dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="Name"
+        android:layout_alignLeft="@+id/editText21"
+        android:layout_alignStart="@+id/editText21" />
+
+    <EditText
+        android:id="@+id/editText21"
+        android:layout_width="70px"
+        android:layout_height="70px"
+        android:layout_below="@+id/editText11"
+        android:layout_marginTop="8dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="Name"
+        android:layout_toEndOf="@+id/totalf1"
+        android:layout_toRightOf="@+id/totalf1" />
+
+    <EditText
+        android:id="@+id/editText20"
+        android:layout_width="70px"
+        android:layout_height="70px"
+        android:layout_below="@+id/editText10"
+        android:layout_marginTop="10dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="Name"
+        android:layout_toEndOf="@+id/editText21"
+        android:layout_alignLeft="@+id/editText9"
+        android:layout_alignStart="@+id/editText9" />
+
+    <EditText
+        android:id="@+id/editText19"
+        android:layout_width="70px"
+        android:layout_height="70px"
+        android:layout_below="@+id/editText9"
+        android:layout_marginTop="9dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="Name"
+        android:layout_toEndOf="@+id/editText20"
+        android:layout_alignLeft="@+id/editText9"
+        android:layout_alignStart="@+id/editText9" />
+
+    <EditText
+        android:id="@+id/editText17"
+        android:layout_width="70px"
+        android:layout_height="70px"
+        android:layout_marginTop="13dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="Name"
+        android:layout_below="@+id/editText16"
+        android:layout_alignLeft="@+id/editText16"
+        android:layout_alignStart="@+id/editText16" />
+
+    <EditText
+        android:id="@+id/editText16"
+        android:layout_width="70px"
+        android:layout_height="70px"
+        android:layout_marginTop="16dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="Name"
+        android:layout_below="@+id/editText15"
+        android:layout_alignLeft="@+id/editText15"
+        android:layout_alignStart="@+id/editText15" />
+
+    <EditText
+        android:id="@+id/editText15"
+        android:layout_width="70px"
+        android:layout_height="70px"
+        android:layout_marginTop="24dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="Name"
+        android:layout_below="@+id/editText14"
+        android:layout_alignLeft="@+id/editText13"
+        android:layout_alignStart="@+id/editText13" />
+
+    <EditText
+        android:id="@+id/editText14"
+        android:layout_width="70px"
+        android:layout_height="70px"
+        android:layout_below="@+id/editText2"
+        android:layout_marginTop="15dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="Name"
+        android:layout_toEndOf="@+id/editText15"
+        android:layout_alignLeft="@+id/editText13"
+        android:layout_alignStart="@+id/editText13" />
+
+    <EditText
+        android:id="@+id/editText13"
+        android:layout_width="70px"
+        android:layout_height="70px"
+        android:layout_marginTop="17dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="Name"
+        android:layout_below="@+id/f1r2"
+        android:layout_alignLeft="@+id/f1r2"
+        android:layout_alignStart="@+id/f1r2" />
+
+    <EditText
+        android:id="@+id/editText12"
+        android:layout_width="70px"
+        android:layout_height="70px"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="Name"
+        android:layout_alignBaseline="@+id/editText21"
+        android:layout_alignBottom="@+id/editText21"
+        android:layout_alignLeft="@+id/editText11"
+        android:layout_alignStart="@+id/editText11" />
+
+    <EditText
+        android:id="@+id/editText11"
+        android:layout_width="70px"
+        android:layout_height="70px"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="Name"
+        android:layout_alignBaseline="@+id/editText20"
+        android:layout_alignBottom="@+id/editText20"
+        android:layout_alignLeft="@+id/editText10"
+        android:layout_alignStart="@+id/editText10" />
+
+    <EditText
+        android:id="@+id/editText10"
+        android:layout_width="70px"
+        android:layout_height="70px"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="Name"
+        android:layout_alignBaseline="@+id/editText19"
+        android:layout_alignBottom="@+id/editText19"
+        android:layout_alignLeft="@+id/editText18"
+        android:layout_alignStart="@+id/editText18" />
+
+    <EditText
+        android:id="@+id/editText9"
+        android:layout_width="70px"
+        android:layout_height="70px"
+        android:layout_marginTop="12dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="Name"
+        android:layout_below="@+id/editText17"
+        android:layout_alignLeft="@+id/editText17"
+        android:layout_alignStart="@+id/editText17" />
+
+    <EditText
+        android:id="@+id/editText18"
+        android:layout_width="70px"
+        android:layout_height="70px"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="Name"
+        android:layout_alignBaseline="@+id/editText9"
+        android:layout_alignBottom="@+id/editText9"
+        android:layout_alignLeft="@+id/editText7"
+        android:layout_alignStart="@+id/editText7" />
+
+    <EditText
+        android:id="@+id/editText7"
+        android:layout_width="70px"
+        android:layout_height="70px"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="Name"
+        android:layout_alignBaseline="@+id/editText17"
+        android:layout_alignBottom="@+id/editText17"
+        android:layout_alignLeft="@+id/editText5"
+        android:layout_alignStart="@+id/editText5" />
+
+    <EditText
+        android:id="@+id/editText6"
+        android:layout_width="70px"
+        android:layout_height="70px"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="Name"
+        android:layout_alignBaseline="@+id/editText14"
+        android:layout_alignBottom="@+id/editText14"
+        android:layout_alignLeft="@+id/editText2"
+        android:layout_alignStart="@+id/editText2" />
+
+    <EditText
+        android:id="@+id/editText5"
+        android:layout_width="70px"
+        android:layout_height="70px"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="Name"
+        android:layout_alignBaseline="@+id/editText16"
+        android:layout_alignBottom="@+id/editText16"
+        android:layout_alignLeft="@+id/editText4"
+        android:layout_alignStart="@+id/editText4" />
+
+    <EditText
+        android:id="@+id/editText4"
+        android:layout_width="70px"
+        android:layout_height="70px"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="Name"
+        android:layout_alignBaseline="@+id/editText15"
+        android:layout_alignBottom="@+id/editText15"
+        android:layout_alignLeft="@+id/editText6"
+        android:layout_alignStart="@+id/editText6" />
+
+    <EditText
+        android:id="@+id/editText2"
+        android:layout_width="70px"
+        android:layout_height="70px"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="Name"
+        android:layout_alignBaseline="@+id/editText13"
+        android:layout_alignBottom="@+id/editText13"
+        android:layout_alignLeft="@+id/f2r2"
+        android:layout_alignStart="@+id/f2r2" />
+
+    <EditText
         android:id="@+id/f1r2"
         android:layout_width="70px"
         android:layout_height="70px"
@@ -31,14 +262,15 @@
         android:layout_width="70px"
         android:layout_height="70px"
 
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="18dp"
         android:hint="1"
         android:inputType="number"
         android:textAlignment="center"
         android:textColor="@android:color/black"
         android:textSize="15sp"
         android:layout_below="@+id/fighter1"
-        />
+        android:layout_toRightOf="@+id/totalf1"
+        android:layout_toEndOf="@+id/totalf1" />
 
     <EditText
         android:id="@+id/f2r1"
@@ -61,10 +293,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Add"
+        android:layout_marginBottom="19dp"
+        android:onClick="addscore"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="47dp"
-        android:onClick="addscore"/>
+        android:layout_centerHorizontal="true" />
 
     <EditText
         android:id="@+id/fighter1"
@@ -122,6 +354,26 @@
         android:layout_alignBottom="@+id/f1r2"
         android:layout_alignLeft="@+id/f2r1"
         android:layout_alignStart="@+id/f2r1" />
+
+    <EditText
+        android:id="@+id/editText"
+        android:layout_width="70px"
+        android:layout_height="70px"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="Name"
+        android:layout_alignBaseline="@+id/editText22"
+        android:layout_alignBottom="@+id/editText22"
+        android:layout_alignLeft="@+id/editText12"
+        android:layout_alignStart="@+id/editText12" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="250px"
+        android:layout_height="80px"
+        android:layout_alignBottom="@+id/f2r1"
+        android:layout_centerHorizontal="true"
+        android:text="TextView" />
 
 </RelativeLayout>
 
